crates/pg_syntax/tests/snapshots/postgres_regress/json@133.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '\"foo\"'::json ->> 1;"
---
SelectStmt@0..27
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..26
    AExpr@7..26
      TypeCast@7..20
        AConst@7..14
          Sconst@7..14 "'\"foo\"'"
        Typecast@14..16 "::"
        TypeName@16..20
          Ident@16..20 "json"
      Whitespace@20..21 " "
      Op@21..24 "->>"
      Whitespace@24..25 " "
      AConst@25..26
        Iconst@25..26 "1"
  Ascii59@26..27 ";"

