crates/pg_syntax/tests/snapshots/postgres_regress/json@136.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_array_length('[]');"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..24 "json_array_length"
      Ascii40@24..25 "("
      AConst@25..29
        Sconst@25..29 "'[]'"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

