crates/pg_syntax/tests/snapshots/postgres_regress/json@137.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_array_length('{\"f1\":1,\"f2\":[5,6]}');"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..24 "json_array_length"
      Ascii40@24..25 "("
      AConst@25..46
        Sconst@25..46 "'{\"f1\":1,\"f2\":[5,6]}'"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

