crates/pg_syntax/tests/snapshots/postgres_regress/json@141.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_each_text('{\"f1\":[1,2,3],\"f2\":{\"f3\":1},\"f4\":null,\"f5\":\"null\"}');"
---
SelectStmt@0..76
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..74
    FuncCall@7..74
      Ident@7..21 "json_each_text"
      Ascii40@21..22 "("
      AConst@22..74
        Sconst@22..74 "'{\"f1\":[1,2,3],\"f2\":{ ..."
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

