crates/pg_syntax/tests/snapshots/postgres_regress/json@142.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_each_text('{\"f1\":[1,2,3],\"f2\":{\"f3\":1},\"f4\":null,\"f5\":99,\"f6\":\"stringy\"}') q;"
---
SelectStmt@0..96
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..95
    List@14..92
      FuncCall@14..92
        Ident@14..28 "json_each_text"
        Ascii40@28..29 "("
        AConst@29..92
          Sconst@29..92 "'{\"f1\":[1,2,3],\"f2\":{ ..."
    Ascii41@92..93 ")"
    Whitespace@93..94 " "
    Alias@94..95
      Ident@94..95 "q"
  Ascii59@95..96 ";"

