crates/pg_syntax/tests/snapshots/postgres_regress/json@144.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_extract_path('{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"stringy\"}}','f2');"
---
SelectStmt@0..79
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..77
    FuncCall@7..77
      Ident@7..24 "json_extract_path"
      Ascii40@24..25 "("
      AConst@25..72
        Sconst@25..72 "'{\"f2\":{\"f3\":1},\"f4\": ..."
      Ascii44@72..73 ","
      AConst@73..77
        Sconst@73..77 "'f2'"
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

