crates/pg_syntax/tests/snapshots/postgres_regress/json@146.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_extract_path('{\"f2\":[\"f3\",1],\"f4\":{\"f5\":99,\"f6\":\"stringy\"}}','f2',1::text);"
---
SelectStmt@0..87
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..85
    FuncCall@7..85
      Ident@7..24 "json_extract_path"
      Ascii40@24..25 "("
      AConst@25..72
        Sconst@25..72 "'{\"f2\":[\"f3\",1],\"f4\": ..."
      Ascii44@72..73 ","
      AConst@73..77
        Sconst@73..77 "'f2'"
      Ascii44@77..78 ","
      TypeCast@78..85
        AConst@78..79
          Iconst@78..79 "1"
        Typecast@79..81 "::"
        TypeName@81..85
          TextP@81..85 "text"
  Ascii41@85..86 ")"
  Ascii59@86..87 ";"

